nueva rama sin conflictos y solucion requerida